add_library(kvsns SHARED
   kvsns_init.c
   kvsns_handle.c
   kvsns_file.c
   kvsns_internal.c
   kvsns_xattr.c
   kvsns_copy.c
   kvsns_log.c
   kvsal_redis.c
   extstore_internal.c
   extstore_readdir.c
   extstore.c
   s3_common.c
   s3_stats_object.c
   s3_test_bucket.c
   s3_put_object.c
   s3_get_object.c
   s3_del_object.c
   s3_list_bucket.c
   mru.c
   threadpool-pthreads.c
)

target_link_libraries(kvsns
   ini_config
   s3
   hiredis
   ${GLib_LIBRARY}
)
